#refactor css file

--- a/guest/index.html
+++ b/guest/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/body.css">
     <title>Writing</title>
 </head>
 <body>
