--- a/guest/index.html
+++ b/guest/index.html
@@ -46,7 +46,24 @@
             </div>
         </div>
         <div id="app-body">
+            <div class="app-slider">
+                <div class="grid">
+                    <div class="slider-item">
+                        <div class="slider-item_image" style="background-image: url(./assets/image/slider.jpg);">
 
+                        </div>
+                        <div class="slider-item_content">
+                            <h1 class="slider_slogan">
+                                Vài ba câu chuyện,<br>... vài ba góc nhìn.
+                            </h1>
+                            <p class="slider_description">
+                                Nơi để viết, chia sẻ những quan điểm, những câu chuyện trong cuộc sống và đó cũng có thể là những trang nhật ký!
+                            </p>
+                            <a href="#" class="slider-signin">Tham gia ngay</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="app-footer">
 
