--- a/guest/index.html
+++ b/guest/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/body.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>Writing</title>
 </head>
 <body>
