slider responsive and #refactors

--- a/guest/index.html
+++ b/guest/index.html
@@ -54,8 +54,8 @@
 
                         </div>
                         <div class="slider-item_content">
-                            <h1 class="slider_slogan">
-                                Vài ba câu chuyện,<br>... vài ba góc nhìn.
+                            <h1 class="slider_slogan">Vài ba câu chuyện,
+                                vài ba góc nhìn...
                             </h1>
                             <p class="slider_description">
                                 Nơi để viết, chia sẻ những quan điểm, những câu chuyện trong cuộc sống và đó cũng có thể là những trang nhật ký!
