disable hover post on mobile

--- a/guest/index.html
+++ b/guest/index.html
@@ -86,7 +86,7 @@
                                             <a href="#" class="content-post_category">Du lịch</a>
                                         </div>
                                         <div class="content-post_title">
-                                            <a href="" class="content-post_link">Bài viết đầu tiên, test title có nội dung dài quá 2 dòng</a>
+                                            <a href="#" class="content-post_link">Bài viết đầu tiên, test title có nội dung dài quá 2 dòng</a>
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
@@ -114,7 +114,7 @@
                                             <a href="#" class="content-post_category">Du lịch</a>
                                         </div>
                                         <div class="content-post_title">
-                                            <a href="" class="content-post_link">Bài viết đầu tiên, test title.</a>
+                                            <a href="#" class="content-post_link">Bài viết đầu tiên, test title.</a>
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
@@ -142,7 +142,7 @@
                                             <a href="#" class="content-post_category">Du lịch</a>
                                         </div>
                                         <div class="content-post_title">
-                                            <a href="" class="content-post_link">Bài viết đầu tiên, test title.</a>
+                                            <a href="#" class="content-post_link">Bài viết đầu tiên, test title.</a>
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
@@ -170,7 +170,7 @@
                                             <a href="#" class="content-post_category">Du lịch</a>
                                         </div>
                                         <div class="content-post_title">
-                                            <a href="" class="content-post_link">Bài viết đầu tiên, test title.</a>
+                                            <a href="#" class="content-post_link">Bài viết đầu tiên, test title.</a>
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
@@ -198,7 +198,7 @@
                                             <a href="#" class="content-post_category">Du lịch</a>
                                         </div>
                                         <div class="content-post_title">
-                                            <a href="" class="content-post_link">Bài viết đầu tiên, test title.</a>
+                                            <a href="#" class="content-post_link">Bài viết đầu tiên, test title.</a>
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
