fix post title limit in 2line

--- a/guest/index.html
+++ b/guest/index.html
@@ -86,7 +86,7 @@
                                             <a href="#" class="content-post_category">Du lịch</a>
                                         </div>
                                         <div class="content-post_title">
-                                            <a href="#" class="content-post_link">Bài viết đầu tiên, test title có nội dung dài quá 2 dòng</a>
+                                            <a href="#" class="content-post_link">Bài viết đầu tiên, test title có nội dung dài quá 2 dòng hihi haha test nội dung bị ẩn cả trên mobile và pc</a>
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
