continute to signin

--- a/guest/index.html
+++ b/guest/index.html
@@ -217,6 +217,15 @@
                     </div>
                     
                 </div>
+
+                <div class="content-continute">
+                    <span class="content-continute_text">
+                        <a href="#" class="content-continute_signin">
+                            Đăng nhập
+                        </a>
+                        để xem thêm nội dung...
+                    </span>
+                </div>
             </div>
         </div>
         <div id="app-footer">
