--- a/guest/index.html
+++ b/guest/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="app-content">
-                <div class="content-new_posts">
+                <div class="content-posts_news">
                     <div class="grid wide col">
                         <div class="content-title">
                             <span>MỚI NHẤT</span>
