--- a/guest/index.html
+++ b/guest/index.html
@@ -72,7 +72,7 @@
                         <div class="content-title">
                             <span>BÀI VIẾT ĐÃ GHIM</span>
                         </div>
-                        <div class="posts_pin row">
+                        <div class="row">
                             <div class="l-9 col">
                                 <div class="content-post_pin row">
                                     <a href="#" class="l-4 m-4 s-4">
