--- a/guest/index.html
+++ b/guest/index.html
@@ -20,7 +20,7 @@
     <div id="app-content">
         <div id="app-header">
             <div class="grid wide col">
-                <div class="header-navbar row">
+                <div class="header-navbar row no-gutters">
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-logo">
                             <a href="#" class="navbar-logo_link">
