fix end line description

--- a/guest/index.html
+++ b/guest/index.html
@@ -202,6 +202,9 @@
                                         <div class="content-post_title">
                                             <a href="#" class="content-post_link">Bài viết đầu tiên, test title có nội dung dài quá 2 dòng hihi haha test nội dung bị ẩn cả trên mobile và pc</a>
                                         </div>
+                                        <div class="content-post_description">
+                                            <p>Test description nội dung ngắn vượt quá 2 trên màn hình mobile nội dung ngắn vượt quá 2 trên màn hình mobile nội dung ngắn vượt quá 2 trên màn hình mobile</p>
+                                        </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
                                                 <img src="https://scontent.fhan5-6.fna.fbcdn.net/v/t39.30808-1/287691495_1351097298728315_8097176180350160348_n.jpg?stp=dst-jpg_s200x200&_nc_cat=107&ccb=1-7&_nc_sid=7206a8&_nc_ohc=YiZR8Le_XooAX-XCfYb&_nc_ht=scontent.fhan5-6.fna&oh=00_AT9tRoDkENwmIFzpDsA44lbGgtCPNgG0gD3Sz0_5-AgmmA&oe=62D508F4" alt="Avartar">
