add footer page

--- a/guest/index.html
+++ b/guest/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/body.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>Writing</title>
 </head>
@@ -346,7 +347,51 @@
             </div>
         </div>
         <div id="app-footer">
-
+            <div class="footer-content">
+                <div class="grid wide col">
+                    <div class="footer-heading row no-gutters">
+                        <div class="footer-logo l-6">
+                            <a href="#" class="footer-logo_link">
+                                <img src="./assets/image/logo.png" alt="Writing">
+                            </a>
+                        </div>
+                        <div class="footer-rules l-6">
+                            <a href="#">NGUYÊN TẮC CỘNG ĐỒNG</a>
+                        </div>
+                    </div>
+                    <div class="footer-body row no-gutters">
+                        <div class="footer-description l-6">
+                            <p>Một sản phẩm được chuẩn bị cho quá trình thực tập xin việc, không áp dụng cho kinh doanh dưới bất kỳ hình thức nào.</p>
+                        </div>
+                        <div class="footer-contact l-6">
+                            <ul class="footer-contact_list">
+                                <li class="footer-contact_item">
+                                    <a href="mailto:cuong.fithau@gmail.com" class="footer-contact_link">
+                                        <i class="fa-solid fa-envelope"></i>
+                                        <p>cuong.fithau@gmail.com</p>
+                                    </a>
+                                </li>
+                                <li class="footer-contact_item">
+                                    <a href="tel:0865235802" class="footer-contact_link">
+                                        <i class="fa-solid fa-phone"></i>
+                                        <p>0865235802</p>
+                                    </a>
+                                </li>
+                                <li class="footer-contact_item">
+                                    <a href="https://github.com/cuonvc" class="footer-contact_link">
+                                        <i class="fa-brands fa-github"></i>
+                                        <p>cuonvc</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-copyright">
+                        <h3>&copy; Copyright 2022</h3>
+                        <p>Bản quyền thuộc về Cuong Nguyen</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
