responsive mobile footer

--- a/guest/index.html
+++ b/guest/index.html
@@ -350,20 +350,20 @@
             <div class="footer-content">
                 <div class="grid wide col">
                     <div class="footer-heading row no-gutters">
-                        <div class="footer-logo l-6">
+                        <div class="footer-logo l-6 m-6">
                             <a href="#" class="footer-logo_link">
                                 <img src="./assets/image/logo.png" alt="Writing">
                             </a>
                         </div>
-                        <div class="footer-rules l-6">
+                        <div class="footer-rules l-6 m-6">
                             <a href="#">NGUYÊN TẮC CỘNG ĐỒNG</a>
                         </div>
                     </div>
                     <div class="footer-body row no-gutters">
-                        <div class="footer-description l-6">
-                            <p>Một sản phẩm được chuẩn bị cho quá trình thực tập xin việc, không áp dụng cho kinh doanh dưới bất kỳ hình thức nào.</p>
+                        <div class="footer-description l-6 m-6">
+                            <p>Một sản phẩm được chuẩn bị cho quá trình thực tập xin việc, không khai thác kinh doanh dưới bất kỳ hình thức nào.</p>
                         </div>
-                        <div class="footer-contact l-6">
+                        <div class="footer-contact l-6 m-6">
                             <ul class="footer-contact_list">
                                 <li class="footer-contact_item">
                                     <a href="mailto:cuong.fithau@gmail.com" class="footer-contact_link">
