add to the top btn

--- a/guest/index.html
+++ b/guest/index.html
@@ -393,6 +393,12 @@
                 </div>
             </div>
         </div>
+
+        <div id="to-top">
+            <div class="to-top_btn">
+                <i class="fa-solid fa-angle-up"></i>
+            </div>
+        </div>
     </div>
 
     <script src="./assets/js/scrip.js"></script>
