--- a/guest/index.html
+++ b/guest/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/fontawesome/css/all.css">
-    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="../common/fontawesome/css/all.css">
+    <link rel="stylesheet" href="../common/css/base.css">
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/header.css">
@@ -25,7 +25,7 @@
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-logo">
                             <a href="#" class="navbar-logo_link">
-                                <img src="./assets/image/logo.png" alt="writing">
+                                <img src="../common/image/logo.png" alt="writing">
                             </a>
                         </div>
                         <div class="navbar-about">
@@ -236,7 +236,7 @@
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
-                                                <img src="./assets/image/logo.png" alt="Avartar">
+                                                <img src="../common/image/logo.png" alt="Avartar">
                                                 <span>Account test</span>
                                             </a>
                                             <div class="content-post_time">
@@ -264,7 +264,7 @@
                                         </div>
                                         <div class="content-post_info">
                                             <a href="#" class="content-post_auth">
-                                                <img src="./assets/image/logo.png" alt="Avartar">
+                                                <img src="../common/image/logo.png" alt="Avartar">
                                                 <span>Account test</span>
                                             </a>
                                             <div class="content-post_time">
@@ -352,7 +352,7 @@
                     <div class="footer-heading row no-gutters">
                         <div class="footer-logo l-6 m-6">
                             <a href="#" class="footer-logo_link">
-                                <img src="./assets/image/logo.png" alt="Writing">
+                                <img src="../common/image/logo.png" alt="Writing">
                             </a>
                         </div>
                         <div class="footer-rules l-6 m-6">
@@ -401,6 +401,6 @@
         </div>
     </div>
 
-    <script src="./assets/js/scrip.js"></script>
+    <script src="../common/js/scrip.js"></script>
 </body>
 </html>
