--- a/guest/index.html
+++ b/guest/index.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="navbar_element navbar-search row no-gutters">
-                        <input class="navbar-search_type" type="text" placeholder="Nhập nội dung tìm kiếm">
+                        <input class="navbar-search_type" type="search" placeholder="Nhập nội dung tìm kiếm">
                         <i class="search_icon fa-solid fa-magnifying-glass"></i>
                     </div> 
                     <div class="navbar_element row no-gutters">
@@ -397,6 +397,73 @@
         <div id="to-top">
             <div class="to-top_btn">
                 <i class="fa-solid fa-angle-up"></i>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal">
+        <div class="modal-content_login" style="display: block;">
+            <div class="modal_close">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <div class="modal-content_header">
+                <div class="modal-content_logo">
+                    <img src="../common/image/logo.png" alt="logo">
+                </div>
+                <div class="modal-content_title">
+                    <h1>Đăng nhập</h1>
+                </div>
+            </div>
+            <div class="modal-content_body">
+                <div class="modal-content_type">
+                    <span>Đăng nhập với Email</span>
+                </div>
+                <div class="modal-content_input">
+                    <input class="content_input__email" type="email" placeholder="Địa chỉ email">
+                    <input class="content_input__password" type="password" placeholder="Mật khẩu đăng nhập">
+                    <span class="content_submit__btn">Đăng nhập</span>
+                </div>
+                <div class="modal-content-to_regiser">
+                    <p>Bạn chưa có tài khoản?
+                        <span>Đăng ký</span>
+                    </p>
+                </div>
+                <div class="modal-content_forget__pass">
+                    <span>Quên mật khẩu?</span>
+                </div>
+            </div>
+        </div>
+        <div class="modal-content_register" style="display: none;">
+            <div class="modal_close">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <div class="modal-content_header">
+                <div class="modal-content_logo">
+                    <img src="../common/image/logo.png" alt="logo">
+                </div>
+                <div class="modal-content_title">
+                    <h1>Đăng ký tài khoản</h1>
+                </div>
+            </div>
+            <div class="modal-content_body">
+                <div class="modal-content_type">
+                    <span>Đăng ký với Email</span>
+                </div>
+                <div class="modal-content_input">
+                    <div class="modal-content_input__name">
+                        <input class="content_input__name" type="text" placeholder="Họ">
+                        <input class="content_input__name" type="text" placeholder="Tên">
+                    </div>
+                    <input class="content_input__email" type="email" placeholder="Địa chỉ email">
+                    <input class="content_input__password" type="password" placeholder="Nhập mật khẩu">
+                    <input class="content_input__password" type="password" placeholder="Nhập lại mật khẩu">
+                    <span class="content_submit__btn">Tạo tài khoản</span>
+                </div>
+                <div class="modal-content-to_login">
+                    <p>Bạn đã có tài khoản?
+                        <span>Đăng nhập</span>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
