fix class name and logic close form

--- a/guest/index.html
+++ b/guest/index.html
@@ -435,7 +435,7 @@
         </div>
         <div class="modal-content_register" style="display: none;">
             <div class="modal_close">
-                <i class="model_close_submit fa-solid fa-xmark"></i>
+                <i class="modal_close_submit fa-solid fa-xmark"></i>
             </div>
             <div class="modal_back">
                 <i class="modal_back_submit fa-solid fa-angle-left"></i>
