click btn to go the login form

--- a/guest/index.html
+++ b/guest/index.html
@@ -401,7 +401,7 @@
         </div>
     </div>
 
-    <div class="modal">
+    <div class="modal" style="display: none;">
         <div class="modal-content_login">
             <div class="modal_close">
                 <i class="modal_close_submit fa-solid fa-xmark"></i>
