fix display form login

--- a/guest/index.html
+++ b/guest/index.html
@@ -338,9 +338,9 @@
 
                 <div class="content-continute">
                     <span class="content-continute_text">
-                        <a href="#" class="content-continute_signin">
+                        <span class="content-continute_signin">
                             Đăng nhập
-                        </a>
+                        </span>
                         để xem thêm nội dung...
                     </span>
                 </div>
