--- a/guest/index.html
+++ b/guest/index.html
@@ -402,7 +402,7 @@
     </div>
 
     <div class="modal" style="display: none;">
-        <div class="modal-content_login">
+        <div class="modal-content_login modal-content">
             <div class="modal_close">
                 <i class="modal_close_submit fa-solid fa-xmark"></i>
             </div>
@@ -433,7 +433,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-content_register" style="display: none;">
+        <div class="modal-content_register modal-content" style="display: none;">
             <div class="modal_close">
                 <i class="modal_close_submit fa-solid fa-xmark"></i>
             </div>
@@ -469,7 +469,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-content_forget-pass" style="display: none;">
+        <div class="modal-content_forget-pass modal-content" style="display: none;">
             <div class="modal_close">
                 <i class="modal_close_submit fa-solid fa-xmark"></i>
             </div>
