fix form hidden

--- a/guest/index.html
+++ b/guest/index.html
@@ -402,95 +402,97 @@
     </div>
 
     <div class="modal" style="display: none;">
-        <div class="modal-content_login modal-content">
-            <div class="modal_close">
-                <i class="modal_close_submit fa-solid fa-xmark"></i>
-            </div>
-            <div class="modal-content_header">
-                <div class="modal-content_logo">
-                    <img src="../common/image/logo.png" alt="logo">
+        <div class="js-modal_container">
+            <div class="modal-content_login modal-content">
+                <div class="modal_close">
+                    <i class="modal_close_submit fa-solid fa-xmark"></i>
                 </div>
-                <div class="modal-content_title">
-                    <h1>Đăng nhập</h1>
-                </div>
-            </div>
-            <div class="modal-content_body">
-                <div class="modal-content_type">
-                    <span>Đăng nhập với Email</span>
-                </div>
-                <div class="modal-content_input">
-                    <input class="content_input__email" type="email" placeholder="Địa chỉ email">
-                    <input class="content_input__password" type="password" placeholder="Mật khẩu đăng nhập">
-                    <span class="content_submit__btn">Đăng nhập</span>
-                </div>
-                <div class="modal-content-to_regiser">
-                    <p>Bạn chưa có tài khoản?
-                        <span class="modal_to-register">Đăng ký</span>
-                    </p>
-                </div>
-                <div class="modal-content_forget__pass">
-                    <span class="forget_pass__submit">Quên mật khẩu?</span>
-                </div>
-            </div>
-        </div>
-        <div class="modal-content_register modal-content" style="display: none;">
-            <div class="modal_close">
-                <i class="modal_close_submit fa-solid fa-xmark"></i>
-            </div>
-            <div class="modal_back">
-                <i class="modal_back_submit fa-solid fa-angle-left"></i>
-            </div>
-            <div class="modal-content_header">
-                <div class="modal-content_logo">
-                    <img src="../common/image/logo.png" alt="logo">
-                </div>
-                <div class="modal-content_title">
-                    <h1>Đăng ký tài khoản</h1>
-                </div>
-            </div>
-            <div class="modal-content_body">
-                <div class="modal-content_type">
-                    <span>Đăng ký với Email</span>
-                </div>
-                <div class="modal-content_input">
-                    <div class="modal-content_input__name">
-                        <input class="content_input__name" type="text" placeholder="Họ">
-                        <input class="content_input__name" type="text" placeholder="Tên">
+                <div class="modal-content_header">
+                    <div class="modal-content_logo">
+                        <img src="../common/image/logo.png" alt="logo">
                     </div>
-                    <input class="content_input__email" type="email" placeholder="Địa chỉ email">
-                    <input class="content_input__password" type="password" placeholder="Nhập mật khẩu">
-                    <input class="content_input__password" type="password" placeholder="Nhập lại mật khẩu">
-                    <span class="content_submit__btn">Tạo tài khoản</span>
+                    <div class="modal-content_title">
+                        <h1>Đăng nhập</h1>
+                    </div>
                 </div>
-                <div class="modal-content-to_login">
-                    <p>Bạn đã có tài khoản?
-                        <span class="modal_to-login">Đăng nhập</span>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="modal-content_forget-pass modal-content" style="display: none;">
-            <div class="modal_close">
-                <i class="modal_close_submit fa-solid fa-xmark"></i>
-            </div>
-            <div class="modal_back">
-                <i class="modal_back_submit fa-solid fa-angle-left"></i>
-            </div>
-            <div class="modal-content_header">
-                <div class="modal-content_logo">
-                    <img src="../common/image/logo.png" alt="logo">
-                </div>
-                <div class="modal-content_title">
-                    <h1>Quên mật khẩu</h1>
+                <div class="modal-content_body">
+                    <div class="modal-content_type">
+                        <span>Đăng nhập với Email</span>
+                    </div>
+                    <div class="modal-content_input">
+                        <input class="content_input__email" type="email" placeholder="Địa chỉ email">
+                        <input class="content_input__password" type="password" placeholder="Mật khẩu đăng nhập">
+                        <span class="content_submit__btn">Đăng nhập</span>
+                    </div>
+                    <div class="modal-content-to_regiser">
+                        <p>Bạn chưa có tài khoản?
+                            <span class="modal_to-register">Đăng ký</span>
+                        </p>
+                    </div>
+                    <div class="modal-content_forget__pass">
+                        <span class="forget_pass__submit">Quên mật khẩu?</span>
+                    </div>
                 </div>
             </div>
-            <div class="modal-content_body">
-                <div class="modal-content_type">
-                    <span>Nhập email tài khoản cần lấy lại mật khẩu</span>
+            <div class="modal-content_register modal-content" style="display: none;">
+                <div class="modal_close">
+                    <i class="modal_close_submit fa-solid fa-xmark"></i>
                 </div>
-                <div class="modal-content_input">
-                    <input class="content_input__email" type="email" placeholder="Địa chỉ email">
-                    <span class="content_submit__btn">Lấy lại mật khẩu</span>
+                <div class="modal_back">
+                    <i class="modal_back_submit fa-solid fa-angle-left"></i>
+                </div>
+                <div class="modal-content_header">
+                    <div class="modal-content_logo">
+                        <img src="../common/image/logo.png" alt="logo">
+                    </div>
+                    <div class="modal-content_title">
+                        <h1>Đăng ký tài khoản</h1>
+                    </div>
+                </div>
+                <div class="modal-content_body">
+                    <div class="modal-content_type">
+                        <span>Đăng ký với Email</span>
+                    </div>
+                    <div class="modal-content_input">
+                        <div class="modal-content_input__name">
+                            <input class="content_input__name" type="text" placeholder="Họ">
+                            <input class="content_input__name" type="text" placeholder="Tên">
+                        </div>
+                        <input class="content_input__email" type="email" placeholder="Địa chỉ email">
+                        <input class="content_input__password" type="password" placeholder="Nhập mật khẩu">
+                        <input class="content_input__password" type="password" placeholder="Nhập lại mật khẩu">
+                        <span class="content_submit__btn">Tạo tài khoản</span>
+                    </div>
+                    <div class="modal-content-to_login">
+                        <p>Bạn đã có tài khoản?
+                            <span class="modal_to-login">Đăng nhập</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-content_forget-pass modal-content" style="display: none;">
+                <div class="modal_close">
+                    <i class="modal_close_submit fa-solid fa-xmark"></i>
+                </div>
+                <div class="modal_back">
+                    <i class="modal_back_submit fa-solid fa-angle-left"></i>
+                </div>
+                <div class="modal-content_header">
+                    <div class="modal-content_logo">
+                        <img src="../common/image/logo.png" alt="logo">
+                    </div>
+                    <div class="modal-content_title">
+                        <h1>Quên mật khẩu</h1>
+                    </div>
+                </div>
+                <div class="modal-content_body">
+                    <div class="modal-content_type">
+                        <span>Nhập email tài khoản cần lấy lại mật khẩu</span>
+                    </div>
+                    <div class="modal-content_input">
+                        <input class="content_input__email" type="email" placeholder="Địa chỉ email">
+                        <span class="content_submit__btn">Lấy lại mật khẩu</span>
+                    </div>
                 </div>
             </div>
         </div>
