--- a/guest/index.html
+++ b/guest/index.html
@@ -61,7 +61,7 @@
                             <p class="slider_description">
                                 Nơi để viết, chia sẻ những quan điểm, những câu chuyện trong cuộc sống và đó cũng có thể là những trang nhật ký!
                             </p>
-                            <a href="#" class="slider-signin">Tham gia ngay</a>
+                            <span class="slider-signin">Tham gia ngay</span>
                         </div>
                     </div>
                 </div>
