--- a/guest/index.html
+++ b/guest/index.html
@@ -52,7 +52,6 @@
                 <div class="grid">
                     <div class="slider-item">
                         <div class="slider-item_image" style="background-image: url(./assets/image/slider.jpg);">
-
                         </div>
                         <div class="slider-item_content">
                             <h1 class="slider_slogan">Vài ba câu chuyện,
@@ -498,7 +497,7 @@
         </div>
     </div>
 
-    <script src="../common/js/scrip.js"></script>
+    <script src="../common/js/base.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
