responsive search mobile

--- a/guest/index.html
+++ b/guest/index.html
@@ -33,6 +33,7 @@
                         </div>
                     </div>
                     <div class="navbar_element navbar-search row no-gutters">
+                        <i class="navbar_back-icon fa-solid fa-arrow-left" style="display: none;"></i>
                         <input class="navbar-search_type" type="search" placeholder="Nhập nội dung tìm kiếm">
                         <i class="search_icon fa-solid fa-magnifying-glass"></i>
                     </div> 
