add comments list

--- a/guest/post.html
+++ b/guest/post.html
@@ -86,11 +86,49 @@
                     </div>
                     <div class="body-post_comments">
                         <div class="comment-form row no-gutters">
-                            <textarea name="" oninput="this.style.height = ''; this.style.height = this.scrollHeight +'px'"
-                                class="comment-form-type" placeholder="Chia sẻ cảm nghĩ của bạn về bài viết này!" >
-                            </textarea>
+                            <div class="comment-form-type_wrapper">
+                                <textarea name="" oninput="this.style.height = '28px'; this.style.height = this.scrollHeight +'px'"
+                                    class="comment-form-type" spellcheck="false" style="height: 28px;" placeholder="Chia sẻ cảm nghĩ của bạn về bài viết này!" >
+                                    
+                                </textarea>
+                            </div>
                             <div class="comment-form-submit">
                                 <span class="comment-form-submit-btn">Gửi</span>
+                            </div>
+                        </div>
+                        <div class="comment-list">
+                            <div class="comment-item">
+                                <div class="comment-item_auth row no-gutters">
+                                    <div class="comment-item_avt">
+                                        <a href="#">
+                                            <img src="https://images.spiderum.com/sp-thumbnails/60eedc30f9bb11ec9a8d257c57210b5d.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="comment-item_info">
+                                        <a href="#">Cuong Nguyen</a>
+                                        <span>19 th7, 2022</span>
+                                    </div>
+                                </div>
+                                <div class="comment-item_content">
+                                    <p>Test dung comment, Như tôi đã đề cập ngay từ phần tiêu đề: tự tin không tự nhiên sinh ra, cũng không tự nhiên mà mất đi. Và tự ti cũng vậy. Mong chúng ta không vì những câu nói của người khác mà đánh mất niềm tin vào bản thân. Cũng mong chúng ta không ngừng cố gắng để trở thành phiên bản tốt nhất của chính mình.</p>
+                                </div>
+                            </div>
+
+                            <div class="comment-item">
+                                <div class="comment-item_auth row no-gutters">
+                                    <div class="comment-item_avt">
+                                        <a href="#">
+                                            <img src="https://images.spiderum.com/sp-thumbnails/60eedc30f9bb11ec9a8d257c57210b5d.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="comment-item_info">
+                                        <a href="#">Cuong Nguyen</a>
+                                        <span>19 th7, 2022</span>
+                                    </div>
+                                </div>
+                                <div class="comment-item_content">
+                                    <p>Test dung comment, Như tôi đã đề cập ngay từ phần tiêu đề: tự tin không tự nhiên sinh ra, cũng không tự nhiên mà mất đi. Và tự ti cũng vậy. Mong chúng ta không vì những câu nói của người khác mà đánh mất niềm tin vào bản thân. Cũng mong chúng ta không ngừng cố gắng để trở thành phiên bản tốt nhất của chính mình.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
