--- a/guest/post.html
+++ b/guest/post.html
@@ -106,11 +106,14 @@
                                     </div>
                                     <div class="comment-item_info">
                                         <a href="#">Cuong Nguyen</a>
-                                        <span>19 th7, 2022</span>
+                                        <span class="row no-gutters">
+                                            <p class="comment-item_info-create">19 th7, 2022</p>
+                                            &nbsp;(Chỉnh sửa:&nbsp;<p class="comment-item_info-modify">19 th7, 2022</p>)
+                                        </span>
                                     </div>
                                 </div>
                                 <div class="comment-item_content">
-                                    <p>Test dung comment, Như tôi đã đề cập ngay từ phần tiêu đề: tự tin không tự nhiên sinh ra, cũng không tự nhiên mà mất đi. Và tự ti cũng vậy. Mong chúng ta không vì những câu nói của người khác mà đánh mất niềm tin vào bản thân. Cũng mong chúng ta không ngừng cố gắng để trở thành phiên bản tốt nhất của chính mình.</p>
+                                    <p>Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment</p>
                                 </div>
                             </div>
 
@@ -123,11 +126,14 @@
                                     </div>
                                     <div class="comment-item_info">
                                         <a href="#">Cuong Nguyen</a>
-                                        <span>19 th7, 2022</span>
+                                        <span class="row no-gutters">
+                                            <p class="comment-item_info-create">19 th7, 2022</p>
+                                            &nbsp;(Chỉnh sửa:&nbsp;<p class="comment-item_info-modify">19 th7, 2022</p>)
+                                        </span>
                                     </div>
                                 </div>
                                 <div class="comment-item_content">
-                                    <p>Test dung comment, Như tôi đã đề cập ngay từ phần tiêu đề: tự tin không tự nhiên sinh ra, cũng không tự nhiên mà mất đi. Và tự ti cũng vậy. Mong chúng ta không vì những câu nói của người khác mà đánh mất niềm tin vào bản thân. Cũng mong chúng ta không ngừng cố gắng để trở thành phiên bản tốt nhất của chính mình.</p>
+                                    <p>Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment, Test nội dung comment</p>
                                 </div>
                             </div>
                         </div>
